--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://hx-links.npmaile.com">
+  <meta property="og:title" content="Links to things in Nate and Deastl presentation">
+  <meta property="og:description"
+    content="This page contains links to relevant sites for the presentation Nate and Jon-Michael Hartway are giving at the Big Sky Developer Conference">
+  <meta property="og:image" content="https://npmaile.com/assets/thumbs-up.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Big Sky Conf Talk Links</title>
+  <style>
+    :root {
+      color-scheme: light dark;
+    }
+  </style>
 </head>
-  <body>
-    <p>htmx stuff</p>
-  </body>
+
+<body>
+  <p><a href="">Link 1</a></p>
+  <p><a href="https://collab.npmaile.com">Link 2</a></p>
+  <p><a href="">Link 3</a></p>
+</body>
+
 </html>
