--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <p><a href="">Link 1</a></p>
   <p><a href="https://collab.npmaile.com">Link 2</a></p>
-  <p><a href="">Link 3</a></p>
+  <p><a href="https://htmx-agario.aws.jmhart.dev/">Link 3</a></p>
 </body>
 
 </html>
