added htmx flappybird

--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
     :root {
       color-scheme: light dark;
     }
+    body {
+      font-weight: 700;
+      font-size: 30px;
+    }
   </style>
 </head>
 
 <body>
-  <p><a href="">Link 1</a></p>
-  <p><a href="https://collab.npmaile.com">Link 2</a></p>
-  <p><a href="https://htmx-agario.aws.jmhart.dev/">Link 3</a></p>
+  <p><a href="https://htmx-flappybird.jmhart.dev/">Link 1 - HTMX Flappybird</a></p>
+  <p><a href="https://collab.npmaile.com">Link 2 - HTMX Pong</a></p>
+  <p><a href="https://htmx-agario.aws.jmhart.dev/">Link 3 - HTMX Agario</a></p>
 </body>
 
 </html>
