--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-  <p><a href="https://htmx-flappybird.jmhart.dev/">Link 1 - HTMX Flappybird</a></p>
-  <p><a href="https://collab.npmaile.com">Link 2 - HTMX Pong</a></p>
-  <p><a href="https://htmx-agario.aws.jmhart.dev/">Link 3 - HTMX Agario</a></p>
+  <p><a href="https://htmx-flappybird.jmhart.dev/">Link 1</a></p>
+  <p><a href="https://collab.npmaile.com">Link 2</a></p>
+  <p><a href="https://htmx-agario.aws.jmhart.dev/">Link 3</a></p>
 </body>
 
 </html>
