--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   <p><a href="https://htmx-flappybird.jmhart.dev/">Link 1</a></p>
   <p><a href="https://collab.npmaile.com">Link 2</a></p>
   <p><a href="https://htmx-agario.aws.jmhart.dev/">Link 3</a></p>
+  <br>
+  <br>
+  <p><a href="https://npmaile.com">Nate's homepage</a></p>
+  <p><a href="https://jmhart.dev">Jon-Michael's homepage</a></p>
 </body>
 
 </html>
